<resources>
    <string name="app_name">Dusty</string>
    <string name="welcome">Welcome to UVCE BookMark</string>
    <string name="login">Login:</string>
    <string name="registration_no">Enter registration number:</string>
    <string name="password">Enter password:</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="register"><u>New user? Register</u></string>
    <string name="register_registerFrag">Register:</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="name">Name:</string>
    <string name="set_password">Set password:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_e_mail_address">Contact Number:</string>
    <string name="registration_number">Registration number:</string>
    <string name="password_word">Password:</string>
    <string name="branch_and_year">Branch and Year</string>
    <string name="you">You</string>
    <string name="add_a_book">Add a book</string>
    <string name="virtual_library">Virtual Library</string>
    <string name="play_snake_game">Play Snake Game</string>
    <string name="dark_mode">Dark mode</string>
    <string name="navigation_draw_open">Open Navigation Drawer</string>
    <string name="navigation_draw_close">Close Navigation Drawer</string>
</resources>
